--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
             </div>
 
             <div id="caixaPrincipal">
-                <div class="caixa"><img src="assets/buds3.png" alt="fone de ouvido Galaxy Buds 3 Pro ">Galaxy Buds 3 Pro<button class="comprar">Comprar</button> </div>
-                <div class="caixa"><img src="assets/qcy.png" alt="fone de ouvido QCY T13">QCY T13 <button class="comprar">Comprar</button> </div>
-                <div class="caixa"><img src="assets/budsFE.png" alt="fone de ouvido Galaxy Buds FE">Galaxy Buds FE <button class="comprar">Comprar</button> </div>
+                <div class="caixa"><img src="./assets/buds3.png" alt="fone de ouvido Galaxy Buds 3 Pro ">Galaxy Buds 3 Pro<button class="comprar">Comprar</button> </div>
+                <div class="caixa"><img src="./assets/qcy.png" alt="fone de ouvido QCY T13">QCY T13 <button class="comprar">Comprar</button> </div>
+                <div class="caixa"><img src="./assets/budsFE.png" alt="fone de ouvido Galaxy Buds FE">Galaxy Buds FE <button class="comprar">Comprar</button> </div>
             </div>
         </section>
 
@@ -50,9 +50,9 @@
             <h3>Carregadores</h3>
 
             <div id="caixaCarregador">
-                <div class="caixa2"><img src="assets/carregadorIphone.png" alt="carregador Cabo Usb-C-Lightning">Cabo Usb-C-Lightning <button class="comprarCarregador">Comprar</button> </div>
-                <div class="caixa2"><img src="assets/carregadorTipoC.png" alt="carregador Ultra Rápido Tipo C">Carregador Ultra Rápido Tipo C <button class="comprarCarregador">Comprar</button> </div>
-                <div class="caixa2"><img src="assets/carregadorUSB.png" alt="Carregador Turbo Compatível Samsung USB">Carregador Turbo Compatível Samsung USB <button class="comprarCarregador">Comprar</button></div>
+                <div class="caixa2"><img src="./assets/carregadorIphone.png" alt="carregador Cabo Usb-C-Lightning">Cabo Usb-C-Lightning <button class="comprarCarregador">Comprar</button> </div>
+                <div class="caixa2"><img src="./assets/carregadorTipoC.png" alt="carregador Ultra Rápido Tipo C">Carregador Ultra Rápido Tipo C <button class="comprarCarregador">Comprar</button> </div>
+                <div class="caixa2"><img src="./assets/carregadorUSB.png" alt="Carregador Turbo Compatível Samsung USB">Carregador Turbo Compatível Samsung USB <button class="comprarCarregador">Comprar</button></div>
 
             </div>
         </section>
