--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>AgTech</title>
     <link rel="stylesheet" href="css/flexBox.css">
+    <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/512/483/483031.png" type="image/x-icon">
 </head>
 
 <body>
